fixing some feedback